# cs43-lectures

./: README.md  cs43-lectures.cabal
src/: .Lecture12.hs.swp  Lecture01.hs  Lecture04.hs  Lecture09.hs  Lecture10-tmp.hs  Lecture10.hs  Lecture11.hs  Lecture12.hs  Lecture16Background.hs  Lecture2.hs  Lecture3.hs  Lecture3.hs.bak  Lecture5.hs  Lecture5.hs.bak  Lecture6.hs  Lecture9.hs  Lecture9b.hs  Main.txt
src/Lecture07/: Lecture7.md
src/Lecture07/cs43-parsing/app/: Calculator.hs
src/Lecture11/: Lecture11.hs
src/Lecture11/hs-shell/: package.yaml
src/Lecture11/hs-shell/app/: Shell0.hs  Shell1.hs  Shell3.hs
src/Lecture12/hs-shell/: .gitignore  ChangeLog.md  README.md  stack.yaml
src/Lecture12/hs-shell/app/: Main.hs  Shell2.hs  Shell3.hs
src/Lecture15/app/: app.cabal
src/Lecture15/app/src/: FunctionalDependencies.hs  Main.hs
src/Lecture20/: 1_Intro.idr  2_Vector.idr  3_DependentPairs.idr  4_Printf.idr  5_Quantities.idr
src/Lecture7/cs43-parsing/: LICENSE  README.md  cs43-parsing.cabal
src/Lecture7/cs43-parsing/app/: Main.hs
src/Lecture7/cs43-parsing/src/: Parser.hs
