name:                app
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ischeinfeld/app#readme
license:             BSD3
license-file:        LICENSE
author:              Isaac Scheinfeld
maintainer:          ischeinfeld@outlook.com
copyright:           2020 Isaac Scheinfeld
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable app
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , mtl
                     , optparse-applicative
